# PA-3IABD

./: .gitignore  CORRECTIONS_REPORT.txt  Cargo.toml  Rapport.md  Rendu_interactif_jupyter.ipynb  [Notebook] Cas de tests.ipynb  debug_dll.py  notes  notes_de_projet  readme.md  requirements.txt  run_all_tests.bat  setup_env.bat  test_11_complet.py  test_convergence.py  test_full_pmc_no_graphics.py  test_pmc_improvements.py  test_pmc_quick.py  test_pmc_validation.py  test_simple_pmc.py  test_xor.py  test_xor_complet.py  test_xor_minimal.py
examples/: use_pmc_from_csv.rs
ml_library/: Cargo.toml
ml_library/src/: lib.rs
ml_library/src/common/: activations.rs  dataset.rs  loss.rs  math.rs  metrics.rs  mod.rs
ml_library/src/linear/: mod.rs  model.rs  tests.rs  train.rs
ml_library/src/perceptron/: mod.rs  model.rs  tests.rs  train.rs
ml_library/src/pmc/: mod.rs  model.rs  model_old.rs  tests.rs  train.rs  train_backup.rs  train_old.rs
ml_library/src/rbfn/: mod.rs  model.rs  tests.rs  train.rs
ml_library/src/svm/: mod.rs  model.rs  tests.rs  train.rs
ml_library/src/tests/: dummy_test.rs
ml_library/tests/: cas_de_test_linear.py  cas_de_test_linear.rs  cas_de_test_perceptron.rs  cas_de_test_pmc.py  cas_de_test_pmc.rs  cas_de_test_rbfn.rs  cas_de_test_svm.rs  dummy_test.rs
src/: main.rs
src/lib/: linear_model.rs
