[package]
name = "ml_library"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
nalgebra = "0.30"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]

